2001-04-08	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds: Per PR170, PR171, and PR172 add .eh_frame 
 
2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* clock/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* Makefile.am: Remove AUTOMAKE_OPTIONS.
	* console/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* include/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* shmsupp/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* start/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* startup/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* timer/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* vectors/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* wrapup/Makefile.am: Remove AUTOMAKE_OPTIONS.

2002-01-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* console/console-io.c: Include rtems/bspIo.h instead of bspIo.h.

2001-11-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Introduce RTEMS_BSP_CONFIGURE.

2001-11-26	Joel Sherrill <joel@OARcorp.com>

	* vectors/vectors.S: Include <bsp.h> to get PPC_VECTOR_FILE_BASE.

2001-11-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Add @exceptions@ to SUBDIRS.
	* configure.ac: Apply RTEMS_BSPOPTS_*(*) to merge-in settings from
	make/custom/psim.cfg; 
	Remove RTEMS_OUTPUT_BUILD_SUBDIRS;
	Add RTEMS_PPC_EXCEPTIONS([old]).
	* include/Makefile.am: include force-preinstall.am.
	* wrapup/Makefile.am: Apply @exceptions@.

2001-11-20	Joel Sherrill <joel@OARcorp.com>

	* console/console-io.c: Fix incorrect comment.

2001-11-08	Dennis Ehlin (ECS) <Dennis.Ehlin@ecs.ericsson.se>

	This modification is part of the submitted modifications necessary to
	support the IBM PPC405 family.  This submission was reviewed by
	Thomas Doerfler <Thomas.Doerfler@imd-systems.de> who ensured it did
	not negatively impact the ppc403 BSPs.  The submission and tracking
	process was captured as PR50.
	* vectors/align_h.S: Added ppc405 support.

2001-10-25	Joel Sherrill <joel@OARcorp.com>
