@@ -21,6 +21,7 @@
 #include <bsp.h>
 #include <rtems/libio.h>
 #include <rtems/libcsupport.h>
+#include <rtems/bspIo.h>
 
 /*
  *  The original table from the application and our copy of it with
