@@ -43,8 +43,8 @@
  *  $Id$
  */
 
-#include "asm.h"
-#include "bsp.h"
+#include <asm.h>
+#include <bsp.h>
 
 .set    CACHE_SIZE,16           # cache line size of 32 bytes
 .set    CACHE_SIZE_L2,4         # cache line size, log 2
