@@ -1,3 +1,8 @@
+2002-04-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* startup/bspstart.c: Include <rtems/bspIo.h>.
+	* vectors/align_h.S: Use <> instead of "" for include files.
+
 2001-04-08	Joel Sherrill <joel@OARcorp.com>
 
 	* startup/linkcmds: Per PR170, PR171, and PR172 add .eh_frame 
